--- a/src/UserInterface.Mvc/UserInterface.Mvc.csproj
+++ b/src/UserInterface.Mvc/UserInterface.Mvc.csproj
@@ -573,6 +573,11 @@
     <Content Include="Scripts\validation\validation.js" />
     <Content Include="Scripts\validation\validation.pt-br.js" />
     <Content Include="Views\Brat\ConPolicial.aspx" />
+    <Content Include="Views\Brat\IncBrat.aspx" />
+    <Content Include="Views\Brat\IncVeiculo.aspx" />
+    <Content Include="Views\Brat\IncTestemunha.aspx" />
+    <Content Include="Views\Brat\IncVitima.aspx" />
+    <Content Include="Views\Brat\IncMotorista.aspx" />
     <Content Include="Views\Brat\IncPolicial.aspx" />
     <Content Include="Views\Brat\Index.aspx" />
     <Content Include="Web.config" />
