--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 /src/*.suo
 /src/BusinessRules/bin/**/*
 /src/BusinessRules/obj/**/*
+
 /src/DataAccess/bin/**/*
 /src/DataAccess/obj/**/*
 
+/src/Entities/bin/**/*
+/src/Entities/obj/**/*
+
+/src/UserInterface.Mvc/bin/**/*
+/src/UserInterface.Mvc/obj/**/*
 
