--- a/src/UserInterface.Mvc/UserInterface.Mvc.csproj
+++ b/src/UserInterface.Mvc/UserInterface.Mvc.csproj
@@ -39,10 +39,12 @@
   <ItemGroup>
     <Compile Include="Controllers\BratController.cs" />
     <Compile Include="Controllers\ControllersInstaller.cs" />
+    <Compile Include="Controllers\PolicialController.cs" />
     <Compile Include="Models\ConsultarBratModel.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\ConsultarPolicialModel.cs" />
+    <Compile Include="WebUserInterfaceHelper\DropDownListHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Castle.Core, Version=1.1.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
@@ -580,6 +582,7 @@
     <Content Include="Views\Brat\IncMotorista.aspx" />
     <Content Include="Views\Brat\IncPolicial.aspx" />
     <Content Include="Views\Brat\Index.aspx" />
+    <Content Include="Views\Policial\IncPolicial.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
