Adição do controller motorista e criação da view com grid.

--- a/src/UserInterface.Mvc/UserInterface.Mvc.csproj
+++ b/src/UserInterface.Mvc/UserInterface.Mvc.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Controllers\BratController.cs" />
     <Compile Include="Controllers\ControllersInstaller.cs" />
+    <Compile Include="Controllers\MotoristaController.cs" />
     <Compile Include="Controllers\PolicialController.cs" />
     <Compile Include="Models\ConsultarBratModel.cs">
       <SubType>Code</SubType>
@@ -574,12 +575,13 @@
     <Content Include="Scripts\uniform\uniform.aristo.css\uniform.aristo.css" />
     <Content Include="Scripts\validation\validation.js" />
     <Content Include="Scripts\validation\validation.pt-br.js" />
+    <Content Include="Views\Motorista\GridControl.ascx" />
     <Content Include="Views\Policial\ConPolicial.aspx" />
     <Content Include="Views\Brat\IncBrat.aspx" />
     <Content Include="Views\Brat\IncVeiculo.aspx" />
     <Content Include="Views\Brat\IncTestemunha.aspx" />
     <Content Include="Views\Brat\IncVitima.aspx" />
-    <Content Include="Views\Brat\IncMotorista.aspx" />
+    <Content Include="Views\Motorista\IncMotorista.aspx" />
     <Content Include="Views\Brat\Index.aspx" />
     <Content Include="Views\Policial\GridControl.ascx" />
     <Content Include="Views\Policial\IncPolicial.aspx" />
