--- a/src/UserInterface.Mvc/UserInterface.Mvc.csproj
+++ b/src/UserInterface.Mvc/UserInterface.Mvc.csproj
@@ -41,6 +41,8 @@
     <Compile Include="Controllers\ControllersInstaller.cs" />
     <Compile Include="Controllers\MotoristaController.cs" />
     <Compile Include="Controllers\PolicialController.cs" />
+    <Compile Include="Controllers\TestemunhaController.cs" />
+    <Compile Include="Controllers\VitimaController.cs" />
     <Compile Include="Models\ConsultarBratModel.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -575,16 +577,19 @@
     <Content Include="Scripts\uniform\uniform.aristo.css\uniform.aristo.css" />
     <Content Include="Scripts\validation\validation.js" />
     <Content Include="Scripts\validation\validation.pt-br.js" />
+    <Content Include="Views\Brat\IncTestemunha.aspx" />
     <Content Include="Views\Motorista\GridControl.ascx" />
     <Content Include="Views\Policial\ConPolicial.aspx" />
     <Content Include="Views\Brat\IncBrat.aspx" />
     <Content Include="Views\Brat\IncVeiculo.aspx" />
-    <Content Include="Views\Brat\IncTestemunha.aspx" />
-    <Content Include="Views\Brat\IncVitima.aspx" />
+    <Content Include="Views\Testemunha\GridControl.ascx" />
+    <Content Include="Views\Vitima\IncVitima.aspx" />
     <Content Include="Views\Motorista\IncMotorista.aspx" />
     <Content Include="Views\Brat\Index.aspx" />
     <Content Include="Views\Policial\GridControl.ascx" />
     <Content Include="Views\Policial\IncPolicial.aspx" />
+    <Content Include="Views\Vitima\GridControl.ascx" />
+    <Content Include="Views\Testemunha\IncTestemunha.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
