--- a/src/UserInterface.Mvc/UserInterface.Mvc.csproj
+++ b/src/UserInterface.Mvc/UserInterface.Mvc.csproj
@@ -116,12 +116,18 @@
       <Link>hibernate.cfg.xml</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Styles\smothmenu.css" />
     <Content Include="Global.asax" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Content Include="Scripts\common.js" />
+    <Content Include="Scripts\DropDownMenu\css\style.css" />
+    <Content Include="Scripts\DropDownMenu\images\title.png" />
+    <Content Include="Scripts\DropDownMenu\js\hoverIntent.js" />
+    <Content Include="Scripts\DropDownMenu\js\jquery.dropdown.js" />
+    <Content Include="Scripts\DropDownMenu\js\jquery.dropdownPlain.js" />
     <Content Include="Scripts\grid.locale-pt-br.js" />
     <Content Include="Scripts\i18n\grid.locale-bg1251.js" />
     <Content Include="Scripts\i18n\grid.locale-pt-br.js" />
@@ -583,20 +589,21 @@
     <Content Include="Scripts\validation\validation.pt-br.js" />
     <Content Include="Views\Acesso\Login.aspx" />
     <Content Include="Views\Motorista\GridControl.ascx" />
-    <Content Include="Views\Policial\ConPolicial.aspx" />
     <Content Include="Views\Brat\IncBrat.aspx" />
+    <Content Include="Views\Policial\ConPolicial.aspx" />
+    <Content Include="Views\Policial\IncPolicial.aspx" />
     <Content Include="Views\Relatorio\RelGerencial.aspx" />
     <Content Include="Views\Relatorio\RelAnalitico.aspx" />
+    <Content Include="Views\Shared\Menu.ascx" />
     <Content Include="Views\Veiculo\GridControl.ascx" />
-    <Content Include="Views\Veiculo\IncVeiculo.aspx" />
+    <Content Include="Views\Veiculo\IncVeiculo.ascx" />
     <Content Include="Views\Testemunha\GridControl.ascx" />
-    <Content Include="Views\Vitima\IncVitima.aspx" />
-    <Content Include="Views\Motorista\IncMotorista.aspx" />
+    <Content Include="Views\Vitima\IncVitima.ascx" />
+    <Content Include="Views\Motorista\IncMotorista.ascx" />
     <Content Include="Views\Brat\Index.aspx" />
     <Content Include="Views\Policial\GridControl.ascx" />
-    <Content Include="Views\Policial\IncPolicial.aspx" />
     <Content Include="Views\Vitima\GridControl.ascx" />
-    <Content Include="Views\Testemunha\IncTestemunha.aspx" />
+    <Content Include="Views\Testemunha\IncTestemunha.ascx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -628,7 +635,6 @@
     <Content Include="Views\Shared\Head.ascx" />
     <Content Include="Views\Shared\List.aspx" />
     <Content Include="Views\Shared\LoginView.ascx" />
-    <Content Include="Views\Shared\Menu.ascx" />
     <Content Include="Views\Shared\MenuHeader.ascx" />
     <Content Include="Views\Shared\New.aspx" />
     <Content Include="Views\Shared\Toolbar.ascx" />
