--- a/src/UserInterface.Mvc/Web.config
+++ b/src/UserInterface.Mvc/Web.config
@@ -1,17 +1,25 @@
 <?xml version="1.0"?>
 <configuration>
   <configSections>
-      <section name="castle" type="Castle.Windsor.Configuration.AppDomain.CastleSectionHandler, Castle.Windsor" />
-      <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-      <sectionGroup name="devExpress">
-        <section name="settings" type="DevExpress.Web.ASPxClasses.SettingsConfigurationSection, DevExpress.Web.v11.1, Version=11.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false"/>
-        <section name="compression" type="DevExpress.Web.ASPxClasses.CompressionConfigurationSection, DevExpress.Web.v11.1, Version=11.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false"/>
-        <section name="themes" type="DevExpress.Web.ASPxClasses.ThemesConfigurationSection, DevExpress.Web.v11.1, Version=11.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false"/>
-        <section name="errors" type="DevExpress.Web.ASPxClasses.ErrorsConfigurationSection, DevExpress.Web.v11.1, Version=11.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false"/>
-      </sectionGroup>
+    <section name="castle" type="Castle.Windsor.Configuration.AppDomain.CastleSectionHandler, Castle.Windsor" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+    <sectionGroup name="devExpress">
+      <section name="settings" type="DevExpress.Web.ASPxClasses.SettingsConfigurationSection, DevExpress.Web.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false"/>
+      <section name="compression" type="DevExpress.Web.ASPxClasses.CompressionConfigurationSection, DevExpress.Web.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="themes" type="DevExpress.Web.ASPxClasses.ThemesConfigurationSection, DevExpress.Web.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="errors" type="DevExpress.Web.ASPxClasses.ErrorsConfigurationSection, DevExpress.Web.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+    </sectionGroup>
   </configSections>
+  <system.webServer>
+    <staticContent>
+      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="1.00:00:00" />
+    </staticContent>
+    <modules>
+      <add type="DevExpress.Web.ASPxClasses.ASPxHttpHandlerModule, DevExpress.Web.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
+    </modules>
+  </system.webServer>
   <castle>
-      <installers>
+    <installers>
       <!-- Dao objects -->
       <install assembly="Brato.DataAccess" />
       <install assembly="TopDown.TopAccess.DataAccess" />
@@ -23,7 +31,7 @@
       <!-- UI objects -->
       <install assembly="Brato.UserInterface"/>
       <install assembly="TopDown.TopFramework.WebUserInterfaceHelper" />
-      </installers>
+    </installers>
     <components>
       <!-- Authorization objects -->
       <component id="TopAccessAuthorization" service="TopDown.TopFramework.BusinessRules.Security.Authorization.IAuthorizer, TopDown.TopFramework.BusinessRules" type="TopDown.TopAccess.BusinessRules.Authorization, TopDown.TopAccess.BusinessRules" />
@@ -34,7 +42,7 @@
       <!-- Audit configuration -->
       <component id="AuditInterceptor" service="NHibernate.IInterceptor, NHibernate" type="TopDown.TopFramework.DataAccess.AuditInterceptor, TopDown.TopFramework.DataAccess" />
     </components>
-    </castle>
+  </castle>
   <log4net>
     <appender name="GeneralLog" type="log4net.Appender.RollingFileAppender">
       <file value="Logs/general.txt" />
@@ -104,6 +112,30 @@
         <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+
+        <add assembly="DevExpress.Data.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.CodeParser.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Utils.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.SpellChecker.v12.1.Core, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxEditors.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxThemes.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxGridView.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxGridView.v12.1.Export, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxHtmlEditor.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxSpellChecker.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.Mvc.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.XtraCharts.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.XtraCharts.v12.1.Web, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Charts.v12.1.Core, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Printing.v12.1.Core, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.XtraReports.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.XtraReports.v12.1.Web, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.XtraScheduler.v12.1.Core, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxScheduler.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.PivotGrid.v12.1.Core, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxPivotGrid.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxPivotGrid.v12.1.Export, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
       </assemblies>
     </compilation>
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
@@ -117,8 +149,47 @@
         <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.WebPages" />
         <add namespace="TopDown.TopFramework.WebUserInterfaceHelper.Mvc.Extensions" />
+
+        <add namespace="DevExpress.Utils" />
+        <add namespace="DevExpress.Web.ASPxClasses" />
+        <add namespace="DevExpress.Web.ASPxDocking" />
+        <add namespace="DevExpress.Web.ASPxGridView" />
+        <add namespace="DevExpress.Web.ASPxGridView.Export" />
+        <add namespace="DevExpress.Web.ASPxEditors" />
+        <add namespace="DevExpress.Web.ASPxCallbackPanel" />
+        <add namespace="DevExpress.Web.ASPxMenu" />
+        <add namespace="DevExpress.Web.ASPxNavBar" />
+        <add namespace="DevExpress.Web.ASPxPopupControl" />
+        <add namespace="DevExpress.Web.ASPxRoundPanel" />
+        <add namespace="DevExpress.Web.ASPxSplitter" />
+        <add namespace="DevExpress.Web.ASPxTabControl" />
+        <add namespace="DevExpress.Web.ASPxTreeView" />
+        <add namespace="DevExpress.Web.ASPxUploadControl" />
+        <add namespace="DevExpress.Web.ASPxHtmlEditor" />
+        <add namespace="DevExpress.Web.ASPxSpellChecker" />
+        <add namespace="DevExpress.Web.Mvc" />
+        <add namespace="DevExpress.Web.Mvc.UI" />
+        <add namespace="DevExpress.XtraCharts" />
+        <add namespace="DevExpress.XtraCharts.Web" />
+        <add namespace="DevExpress.XtraReports" />
+        <add namespace="DevExpress.XtraReports.Web" />
+        <add namespace="DevExpress.XtraPivotGrid" />
+        <add namespace="DevExpress.XtraPivotGrid.Customization" />
+        <add namespace="DevExpress.Data.PivotGrid" />
+        <add namespace="DevExpress.Web.ASPxPivotGrid" />
+        <add namespace="DevExpress.XtraScheduler" />
+        <add namespace="DevExpress.XtraScheduler.Native" />
+        <add namespace="DevExpress.Web.ASPxScheduler" />
       </namespaces>
+
+      <controls>
+        <add tagPrefix="dxpc" namespace="DevExpress.Web.ASPxPopupControl" assembly="DevExpress.Web.v12.1"/>
+      </controls>
+      
     </pages>
+    <httpModules>
+      <add type="DevExpress.Web.ASPxClasses.ASPxHttpHandlerModule, DevExpress.Web.v12.1, Version=12.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
+    </httpModules>
   </system.web>
 
   <appSettings>
