--- a/src/Reports/Reports.csproj
+++ b/src/Reports/Reports.csproj
@@ -54,6 +54,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RelAnaliticoReport.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="RelAnaliticoReport.Designer.cs">
+      <DependentUpon>RelAnaliticoReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="RelGerencialReport.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -64,6 +70,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\licenses.licx" />
+    <EmbeddedResource Include="RelAnaliticoReport.resx">
+      <DependentUpon>RelAnaliticoReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="RelGerencialReport.resx">
       <DependentUpon>RelGerencialReport.cs</DependentUpon>
     </EmbeddedResource>
