Alterações para nossa apresentação

--- a/src/BusinessRules/BusinessRules.csproj
+++ b/src/BusinessRules/BusinessRules.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DataRules.cs" />
     <Compile Include="RulesInstaller.cs" />
   </ItemGroup>
   <ItemGroup>
