--- a/src/UserInterface.Mvc/Web.config
+++ b/src/UserInterface.Mvc/Web.config
@@ -105,6 +105,12 @@
   </log4net>
   <system.web>
     <globalization culture="pt-br" uiCulture="pt-br" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Acesso/Login" timeout="14400" />
+    </authentication>
+    <authorization>
+      <allow users="?" />
+    </authorization>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
